<resources>
    <string name="app_name" translatable="false">instagram_Clone</string>
    <string name="phone_number_email_or_username">Phone number, email, or username</string>
    <string name="login">Log in</string>
    <string name="forgot_your_login_details">Forgot your login details?</string>
    <string name="get_help_loggin_in">Get help logged in.</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="login_with_facebook">Login With Facebook</string>
</resources>